--- a/trunk/jsidplay2/src/main/resources/sidplay/consoleplayer/ConsolePlayer_de.properties
+++ b/trunk/jsidplay2/src/main/resources/sidplay/consoleplayer/ConsolePlayer_de.properties
@@ -2,7 +2,7 @@ USAGE=Usage anzeigen
 DEBUG=CPU Register und Befehle ausgeben
 DRIVER=Sound Treiber (NONE, SOUNDCARD, WAV, MP3, LIVE_WAV oder LIVE_MP3)
 EMULATION=Emulation (NONE, RESID, RESIDFP, HARDSID)
-RECORDING_FILENAME=Dateiname für die Aufnahme
+RECORDING_FILENAME=Dateiname f\u00fcr die Aufnahme
 START_SONG=Start Song (Default: Start Song der Musikdatei)
 LOOP=Musik Wiederholen
 SINGLE=Einzelnen Song spielen
@@ -15,7 +15,7 @@ DISABLE_STEREO_FILTER=Stereo SID Filter ausschalten
 FORCE_MODEL=SID Chip MOS8580 oder MOS6581 erzwingen (Default: Info aus der Musikdatei)
 DEFAULT_MODEL=SID Chip MOS8580 oder MOS6581, falls nicht aus der Musikdatei ermittelbar
 START_TIME=Start Zeit im Format [m:]s
-DEFAULT_LENGTH=Default Song Länge, Format: [m:]s (0 bedeutet endlos)
+DEFAULT_LENGTH=Default Song L\u00e4nge, Format: [m:]s (0 bedeutet endlos)
 ENABLE_SID_DATABASE=Use song length database
 VERBOSE=Detailliertheit der Konsolen Ausgabe (Level=0,1,2)
 QUIET=Keine Ausgaben
@@ -30,7 +30,7 @@ FILENAMES=Dateiname(n)
 PLAYLIST=Spielliste
 LOOPING=Wiederholung
 SONG_SPEED=Song Speed
-SONG_LENGTH=Song Länge
+SONG_LENGTH=Song L\u00e4nge
 UNLIMITED=endlos
 DRIVER_ADDR=Treiber
 NOT_PRESENT=Keiner
@@ -43,8 +43,8 @@ SID_DETAILS=SID Details
 FILTER=Filter
 MODEL=Chip
 
-KEYBOARD_CONTROLS=Tastenbefehle (Enter drücken nach der Eingabe):
-FORWARD_REWIND=< > - Spiele vorherigen/nächsten Song
+KEYBOARD_CONTROLS=Tastenbefehle (Enter dr\u00fccken nach der Eingabe):
+FORWARD_REWIND=< > - Spiele vorherigen/n\u00e4chsten Song
 NORMAL_FAST=, . - Normale/schnelle Geschwindigkeit
 PAUSE_CONTINUE=p   - Pause/fortsetzen
 FIRST_LAST=h e - Spiele ersten/letzten Song
