--- a/trunk/jsidplay2/src/main/resources/ui/JSidPlay2Main_de.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/JSidPlay2Main_de.properties
@@ -1,2 +1,2 @@
 IMPORT_CONFIGURATION=Importiere die Konfiguration: '%s'!\n
-CONFIGURATION_ERROR=Konfigurationsdateien können nicht gelesen werden: '%s'.*!\nEventuell läuft schon eine Instanz von JSIDPlay2 oder sie wurde mit einer älteren Version erzeugt!\nEs kann helfen diese Dateien zu löschen und die App neu zu starten!\n
+CONFIGURATION_ERROR=Konfigurationsdateien k\u00f6nnen nicht gelesen werden: '%s'.*!\nEventuell l\u00e4uft schon eine Instanz von JSIDPlay2 oder sie wurde mit einer \u00e4lteren Version erzeugt!\nEs kann helfen diese Dateien zu l\u00f6schen und die App neu zu starten!\n
