--- a/trunk/jsidplay2/src/main/resources/ui/emulationsettings/EmulationSettings_de.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/emulationsettings/EmulationSettings_de.properties
@@ -1,9 +1,9 @@
 ICON=ui/icons/8580_3390.png
 TITLE=Emulator Einstellungen
 
-VOLUME_CONTROL=Lautstärkeregler
-MAIN_SID_LEVEL=Haupt SID Lautstärke
-SECOND_SID_LEVEL=Zweiter SID Lautstärke
+VOLUME_CONTROL=Lautst\u00e4rkeregler
+MAIN_SID_LEVEL=Haupt SID Lautst\u00e4rke
+SECOND_SID_LEVEL=Zweiter SID Lautst\u00e4rke
 LEFT_BALANCE=Balance des Haupt SID (linker zu rechter Lautsprecher)
 RIGHT_BALANCE=Balance des Zweiten SID (rechter zu linker Lautsprecher)
 
@@ -17,9 +17,9 @@ AUTO=Automatisch
 FAKE_STEREO=2 SIDs bei gleicher Adresse (Mono als Stereo erzwingen)
 STEREO=2 SIDs (Stereo erzwingen)
 
-BASE_ADDRESS_TIP=0xd400 = Fake Stereo (verwende zwei SID chips für Mono Tunes)
+BASE_ADDRESS_TIP=0xd400 = Fake Stereo (verwende zwei SID chips f\u00fcr Mono Tunes)
 SID_READ=Lesen vom SID macht:
-SID_READ_TIP=Lese Operationen werden durch den ausgewählten SID chip ausgeführt
+SID_READ_TIP=Lese Operationen werden durch den ausgew\u00e4hlten SID chip ausgef\u00fchrt
 FIRST_SID=Haupt SID
 SECOND_SID=Zweiter SID
 DIGI_BOOST=Digi Hack
