--- a/trunk/jsidplay2/src/main/resources/ui/favorites/FavoritesTab_de.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/favorites/FavoritesTab_de.properties
@@ -1,5 +1,5 @@
-HINT=Bitte das Kontext-Menü auf der Spaltenüberschrift öffnen um zusätzliche Informationen über die Tunes einzublenden!
-HINT2=Bitte das Kontext-Menü auf ausgewählten Tunes öffnen um zahlreiche Aktionen auszuführen!
+HINT=Bitte das Kontext-Men\u00fc auf der Spalten\u00fcberschrift \u00f6ffnen um zus\u00e4tzliche Informationen \u00fcber die Tunes einzublenden!
+HINT2=Bitte das Kontext-Men\u00fc auf ausgew\u00e4hlten Tunes \u00f6ffnen um zahlreiche Aktionen auszuf\u00fchren!
 
 REG_EXPR_FILTER=Detail-Filter:
 UNSORT_FAVORITES=Sortierung aufheben
@@ -9,8 +9,8 @@ MOVE_DOWN_FAVORITE=Favorit nach unten
 FILENAME=Filename
 
 CUSTOMIZE_COLUMN=Spalte einrichten
-REMOVE_COLUMN=Spalte löschen
-ADD_COLUMN=Spalte hinzufügen
+REMOVE_COLUMN=Spalte l\u00f6schen
+ADD_COLUMN=Spalte hinzuf\u00fcgen
 TUNE_ACTIONS=Tune Aktionen
 SHOW_STIL=STIL anzeigen...
 EXPORT_TO_DIR=Exportieren nach...
@@ -18,10 +18,10 @@ MOVE_TO_TAB=Verschieben in Tab
 COPY_TO_TAB=Kopieren in Tab
 CONVERT_TO=Konvertieren nach...
 PSID64=PSID64 (.prg)
-REMOVE_N_OF_MY_FAVORITES=%d Favoriteneintrag löschen?
-REMOVE_FAVORITES=Favoriteneintrag löschen
-OVERWRITE_EXISTING_FILE=Bestehende Datei %s überschreiben?: 
-OVERWRITE_FILE=Datei überschreiben
+REMOVE_N_OF_MY_FAVORITES=%d Favoriteneintrag l\u00f6schen?
+REMOVE_FAVORITES=Favoriteneintrag l\u00f6schen
+OVERWRITE_EXISTING_FILE=Bestehende Datei %s \u00fcberschreiben?: 
+OVERWRITE_FILE=Datei \u00fcberschreiben
 
 HVSCEntry.path=Dateipfad
 HVSCEntry.name=Dateiname
@@ -36,24 +36,24 @@ HVSCEntry.clockFreq=Takt Frequenz
 HVSCEntry.speed=Geschwindigkeit
 HVSCEntry.sidModel1=SID Modell 1
 HVSCEntry.sidModel2=SID Modell 2
-HVSCEntry.compatibility=Kompatibilität
-HVSCEntry.tuneLength=Tune Länge (s)
+HVSCEntry.compatibility=Kompatibilit\u00e4t
+HVSCEntry.tuneLength=Tune L\u00e4nge (s)
 HVSCEntry.audio=Ton
 HVSCEntry.sidChipBase1=SID Chip Basisadresse 1
 HVSCEntry.sidChipBase2=SID Chip Basisadresse 2
 HVSCEntry.driverAddress=Treiberaddresse
 HVSCEntry.loadAddress=Ladeaddresse
-HVSCEntry.loadLength=Ladelänge
+HVSCEntry.loadLength=Ladel\u00e4nge
 HVSCEntry.initAddress=Init-Addresse
 HVSCEntry.playerAddress=Player-Addresse
 HVSCEntry.fileDate=File Datum
-HVSCEntry.fileSizeKb=File Grösse (kb)
-HVSCEntry.tuneSizeB=Tune Grösse (b)
+HVSCEntry.fileSizeKb=File Gr\u00f6sse (kb)
+HVSCEntry.tuneSizeB=Tune Gr\u00f6sse (b)
 HVSCEntry.relocStartPage=Reloc. Start Seite
 HVSCEntry.relocNoPages=Reloc. Seitenanzahl
 HVSCEntry.stilGlbComment=STIL glb. Kommentar
 StilEntry.stilName=STIL Name
 StilEntry.stilAuthor=STIL Autor
 StilEntry.stilTitle=STIL Titel
-StilEntry.stilArtist=STIL Künstler
+StilEntry.stilArtist=STIL K\u00fcnstler
 StilEntry.stilComment=STIL Kommentar
