--- a/trunk/jsidplay2/src/main/resources/ui/gamebase/GameBase_de.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/gamebase/GameBase_de.properties
@@ -1,7 +1,7 @@
 GAMEBASE=Gamebase 64
 
 AUTO_CONFIGURATION=Online Auto-Konfiguration (Bitte haben sie Geduld, der Download kann sehr lange dauern!)
-HINT=Für diese Funktion ist ein permanenter Online-Zugang erforderlich!
+HINT=F\u00fcr diese Funktion ist ein permanenter Online-Zugang erforderlich!
 CONFIGURATION=Konfiguration
 DB_FILE=Datenbankdatei:
 BROWSE=Durchsuchen...
