--- a/trunk/jsidplay2/src/main/resources/ui/joysticksettings/JoystickSettings_de.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/joysticksettings/JoystickSettings_de.properties
@@ -5,7 +5,7 @@ JOYSTICK_IN_PORT_1_ENABLED=Joystick in Port 1 eingesteckt
 JOYSTICK_IN_PORT_2_ENABLED=Joystick in Port 2 eingesteckt
 PORT_1=Port 1
 PORT_2=Port 2
-DEVICE=Gerät
+DEVICE=Ger\u00e4t
 UP=Hoch
 DOWN=Runter
 LEFT=Links
