--- a/trunk/jsidplay2/src/main/resources/ui/musiccollection/MusicCollection_de.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/musiccollection/MusicCollection_de.properties
@@ -7,7 +7,7 @@ COMPOSERS_PHOTO=Komponist
 
 SEARCH=Suchen
 SEARCH_FOR=Suchen nach:
-SEARCH_NEXT=Suche nächsten Treffer
+SEARCH_NEXT=Suche n\u00e4chsten Treffer
 SEARCH_STOP=Suche anhalten
 SEARCH_FROM_START_AGAIN=Wieder von vorne beginnen
 RECREATE_SEARCH_DATABASE=Such-Datenbank neu erstellen
@@ -24,17 +24,17 @@ CREATE_SEARCH_DATABASE=Such-Datenbank erstellen
 DOWNLOAD=Herunterladen
 
 SHOW_STIL=STIL anzeigen...
-ADD_TO_FAVORITES=Zu Favoriten hinzufügen
+ADD_TO_FAVORITES=Zu Favoriten hinzuf\u00fcgen
 CONVERT_TO=Konvertieren nach...
 PSID64=PSID64 (.prg)
 DOWNLOAD_R2=Download als mp3 (6581R2)
 DOWNLOAD_R4=Download als mp3 (6581R4)
 DOWNLOAD_R5=Download als mp3 (8580R5)
 
-FORWARD=Forwärts
-BACKWARD=Rückwärts
-SHOW_NEXT_MATCH=Nächsten Treffer anzeigen
-ADD_TO_A_NEW_PLAYLIST=Einer neuen Playlist hinzufügen
+FORWARD=Forw\u00e4rts
+BACKWARD=R\u00fcckw\u00e4rts
+SHOW_NEXT_MATCH=N\u00e4chsten Treffer anzeigen
+ADD_TO_A_NEW_PLAYLIST=Einer neuen Playlist hinzuf\u00fcgen
 
 NEW_TAB=Neuer Tab
 
@@ -54,24 +54,24 @@ HVSCEntry.clockFreq=Takt Frequenz
 HVSCEntry.speed=Geschwindigkeit
 HVSCEntry.sidModel1=SID Modell 1
 HVSCEntry.sidModel2=SID Modell 2
-HVSCEntry.compatibility=Kompatibilität
-HVSCEntry.tuneLength=Tune Länge (s)
+HVSCEntry.compatibility=Kompatibilit\u00e4t
+HVSCEntry.tuneLength=Tune L\u00e4nge (s)
 HVSCEntry.audio=Ton
 HVSCEntry.sidChipBase1=SID Chip Basisadresse 1
 HVSCEntry.sidChipBase2=SID Chip Basisadresse 2
 HVSCEntry.driverAddress=Treiberaddresse
 HVSCEntry.loadAddress=Ladeaddresse
-HVSCEntry.loadLength=Ladelänge
+HVSCEntry.loadLength=Ladel\u00e4nge
 HVSCEntry.initAddress=Init-Addresse
 HVSCEntry.playerAddress=Player-Addresse
 HVSCEntry.fileDate=File Datum
-HVSCEntry.fileSizeKb=File Grösse (kb)
-HVSCEntry.tuneSizeB=Tune Grösse (b)
+HVSCEntry.fileSizeKb=File Gr\u00f6sse (kb)
+HVSCEntry.tuneSizeB=Tune Gr\u00f6sse (b)
 HVSCEntry.relocStartPage=Reloc. Start Seite
 HVSCEntry.relocNoPages=Reloc. Seitenanzahl
 HVSCEntry.stilGlbComment=STIL glb. Kommentar
 StilEntry.stilName=STIL Name
 StilEntry.stilAuthor=STIL Autor
 StilEntry.stilTitle=STIL Titel
-StilEntry.stilArtist=STIL Künstler
+StilEntry.stilArtist=STIL K\u00fcnstler
 StilEntry.stilComment=STIL Kommentar
