--- a/trunk/jsidplay2/src/main/resources/ui/siddump/SidDump_de.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/siddump/SidDump_de.properties
@@ -6,12 +6,12 @@ REPLAY_ALL=Wiedergabe/Stop
 STOP=Emulator stoppen
 START_STOP_RECORDING=Aufnahme Starten/Stoppen
 START_STOP_RECORDING_TIP=SID dump an/aus
-NOT_AVAILABLE=Player Addresse ist 0, SIDDump ist nicht verfügbar!
+NOT_AVAILABLE=Player Addresse ist 0, SIDDump ist nicht verf\u00fcgbar!
 
 TIME_IN_SECONDS=Zeit in Sekunden
 TIME_IN_SECONDS_TIP=Zeit in Sekunden statt Frames anzeigen
-LOW_RESOLUTION_MODE=Niedrige Auflösung
-LOW_RESOLUTION_MODE_TIP=Niedrige Auflösung (nur eine Zeile pro Note anzeigen)
+LOW_RESOLUTION_MODE=Niedrige Aufl\u00f6sung
+LOW_RESOLUTION_MODE_TIP=Niedrige Aufl\u00f6sung (nur eine Zeile pro Note anzeigen)
 
 RECORD_OPTIONS=Aufnahme Optionen
 FIRST_FRAME=Erster Frame:
@@ -27,11 +27,11 @@ PATTERN_SPACING=Pattern Spacing:
 PATTERN_SPACING_TIP=Pattern spacing, Default: 0 (keines)
 PATTERN_SPACING_NEG=Pattern spacing muss eine positive Zahl sein!
 OLD_NOTE_FACTOR=Old note factor:
-OLD_NOTE_FACTOR_TIP="Oldnote-sticky" factor. Default 1, erhöhen für eine bessere Vibrato Anzeige (erfordert gut kalibrierte Frequenzen)
+OLD_NOTE_FACTOR_TIP="Oldnote-sticky" factor. Default 1, erh\u00f6hen f\u00fcr eine bessere Vibrato Anzeige (erfordert gut kalibrierte Frequenzen)
 OLD_NOTE_FACTOR_NEG=Old note factor muss eine positive Zahl sein!
-TABLE_FONT_SIZE=Tabellen Zeichengröße:
-TABLE_FONT_SIZE_TIP=Tabellen Zeichengröße
-TABLE_FONT_SIZE_NEG=Tabellen Zeichengröße muss eine positive Zahl sein (<=24)!
+TABLE_FONT_SIZE=Tabellen Zeichengr\u00f6\u00dfe:
+TABLE_FONT_SIZE_TIP=Tabellen Zeichengr\u00f6\u00dfe
+TABLE_FONT_SIZE_NEG=Tabellen Zeichengr\u00f6\u00dfe muss eine positive Zahl sein (<=24)!
 BASE_FREQ=Base Freq:
 BASE_FREQ_TIP=Frequenz Kalibrierung. Noten Frequenz angeben
 BASE_FREQ_HEX=Base Frequenz muss eine hexadezimale Zahl sein (ab 0x00)!
