--- a/trunk/jsidplay2/src/main/resources/ui/sidreg/SidReg_de.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/sidreg/SidReg_de.properties
@@ -26,7 +26,7 @@ PADDLES=Paddles
 OSC_3=Osc. 3
 ENV_3=Env. 3
 
-SELECT_ALL=Alles Auswählen
+SELECT_ALL=Alles Ausw\u00e4hlen
 DESELECT_ALL=Auswahl Aufheben
 
 SELECT_ALL=Select All
@@ -61,8 +61,8 @@ VOICE_3_SR=$D414 Stimme 3: Halten/Ausklingen Kontrollregister
 FCUT_L=$D415 Grenzfrequenz: Low-Nibble
 FCUT_H=$D416 Grenzfrequenz: High-Byte
 FRES=$D417 Filter Resonanzkontrolle / Voice Input Kontrolle
-FVOL=$D418 Select Filtermodus und Lautstärke
+FVOL=$D418 Select Filtermodus und Lautst\u00e4rke
 PADDLE1=$D419 Analog/Digital Konverter: Paddle 1
 PADDLE2=$D41A Analog/Digital Konverter: Paddle 2
 OSC3=$D41B Oszillator 3 Output
-ENV3=$D41C Hüllkurven Generator 3 Output
+ENV3=$D41C H\u00fcllkurven Generator 3 Output
