--- a/trunk/jsidplay2/src/main/resources/ui/tuneinfos/TuneInfos_de.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/tuneinfos/TuneInfos_de.properties
@@ -17,24 +17,24 @@ HVSCEntry.clockFreq=Takt Frequenz
 HVSCEntry.speed=Geschwindigkeit
 HVSCEntry.sidModel1=SID Modell 1
 HVSCEntry.sidModel2=SID Modell 2
-HVSCEntry.compatibility=Kompatibilität
-HVSCEntry.tuneLength=Tune Länge (s)
+HVSCEntry.compatibility=Kompatibilit\u00e4t
+HVSCEntry.tuneLength=Tune L\u00e4nge (s)
 HVSCEntry.audio=Ton
 HVSCEntry.sidChipBase1=SID Chip Basisadresse 1
 HVSCEntry.sidChipBase2=SID Chip Basisadresse 2
 HVSCEntry.driverAddress=Treiberaddresse
 HVSCEntry.loadAddress=Ladeaddresse
-HVSCEntry.loadLength=Ladelänge
+HVSCEntry.loadLength=Ladel\u00e4nge
 HVSCEntry.initAddress=Init-Addresse
 HVSCEntry.playerAddress=Player-Addresse
 HVSCEntry.fileDate=File Datum
-HVSCEntry.fileSizeKb=File Grösse (kb)
-HVSCEntry.tuneSizeB=Tune Grösse (b)
+HVSCEntry.fileSizeKb=File Gr\u00f6sse (kb)
+HVSCEntry.tuneSizeB=Tune Gr\u00f6sse (b)
 HVSCEntry.relocStartPage=Reloc. Start Seite
 HVSCEntry.relocNoPages=Reloc. Seitenanzahl
 HVSCEntry.stilGlbComment=STIL glb. Kommentar
 StilEntry.stilName=STIL Name
 StilEntry.stilAuthor=STIL Autor
 StilEntry.stilTitle=STIL Titel
-StilEntry.stilArtist=STIL Künstler
+StilEntry.stilArtist=STIL K\u00fcnstler
 StilEntry.stilComment=STIL Kommentar
