--- a/trunk/jsidplay2/src/main/resources/ui/virtualKeyboard/Keyboard_de.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/virtualKeyboard/Keyboard_de.properties
@@ -5,7 +5,7 @@ COMMANDS=Wichtige Befehle
 LIST=Basic Programm anzeigen
 RUN=Basic Programm starten
 SYS=Assembler Programm starten
-RESET=Reset auslösen
+RESET=Reset ausl\u00f6sen
 FLOPPY_DIR=Disketteninhalt anzeigen
 FLOPPY_LOAD=Erste Datei von Diskette laden
 DATASETTE_LOAD=Erste Datei von Kasette laden
